--- a/styles.css
+++ b/styles.css
@@ -188,7 +188,7 @@ body {
     margin-bottom: 48px;
 }
 
-.exhibitions__filter-item {
+.exhibitions__filter {
     border-radius: 8px;
     height: 58px;
     width: 160px;
@@ -201,12 +201,12 @@ body {
     transition: all .2s ease;
 }
 
-.exhibitions__filter-item:hover {
+.exhibitions__filter:hover {
     color: var(--violet);
     text-decoration: underline;
 }
 
-.exhibitions__filter-item.active {
+.exhibitions__filter.active {
     background-color: var(--blue);
     color: black;
     text-decoration: none;
