--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@
     --blue: #C7D2E9;
     --violet: #5D16D5;
     --yellow: #f0de08;
+    --main-width: 1030px;
+    --carousel-height: 600px;
 }
 
 * {
@@ -44,7 +46,7 @@ body {
 }
 
 .container {
-    width: 1030px;
+    width: var(--main-width);
     margin: 0 auto;
 }
 
@@ -182,6 +184,74 @@ body {
 .nav__menu-item:hover {
     text-decoration: underline;
     color: var(--violet);
+}
+
+.carousel {
+    position: relative;
+    width: var(--main-width);
+    margin: 0 auto;
+}
+
+.carousel__container {
+    overflow: hidden;
+}
+
+.carousel__controls {
+    padding: 0;
+    border: none;
+}
+
+.carousel__controls-item {
+    margin: 0;
+    padding: 0;
+    background: transparent;
+    border: none;
+    position: absolute;
+    top: 50%;
+    cursor: pointer;
+    margin-top: -40px;
+}
+
+.previous { left: -80px; }
+.next { right: -80px; }
+
+
+.carousel__slides {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    transition: all 1s ease;
+}
+
+.carousel__slide-item  {
+    height: var(--carousel-height);
+    display: inline-block;
+    position: relative;
+}
+
+.carousel__slide-item img {
+    width: var(--main-width);
+}
+
+.carousel__link {
+    font-size: 18px;
+    padding: 12px 30px;
+    border-radius: 8px;
+    border: none;
+    background-color: var(--violet);
+    color: var(--white);
+    cursor: pointer;
+    transition: all .2s ease;
+    position: absolute;
+    text-decoration: none;
+    bottom: 80px;
+    z-index: 2;
+    left: 60px;
+}
+
+.carousel__link:hover {
+    background-color: var(--black);
 }
 
 .exhibitions__filters {
